========================
0.0.69
========================

- fixed `input` filter in the Schema actions
- added `API().debug()` method for quick printing data
- added `RESTBuilder().debug()` method for quick printing data

========================
0.0.68
========================

- fixed sending files via `REQUEST()` method (a problem with the buffer)
- added `$.variables(str, [data])` method
	- `str` supports dynamic arguments in the form `{user.key}, {model.key}, {data.key}, {params.key} or {query.key}`
- added QueryBuilder by adding `QueryBuilder.audit($, [message], [type])` method
	- `message` supports dynamic arguments in the form `{user.key}, {model.key}, {data.key}, {params.key} or {query.key}`
- added `CONF.root` as an alias for `CONF.default_root`
- fixed uploading files
- fixed parsing dates with `yy`

========================
0.0.67
========================

- improved `encoding` in the `FlowStreamMessage.variables(str, [data], [encoding])` method (it can be a `function(val, key)`)
- improved `encode` argument in `String.args()` - now it can be a `function(val, key)`
- improved error handling in JSON Schemas
- fixed routing
- added `CALL(schema, model, [controller])` method
- added `schema.action([name], options)` method
- fixed error handling in `API`
- added a simple HTML parser `String.parseHTML([trim])`
- improved error handling in unit tests
- fixed number converting in JSON schemas
- extended `QueryBuilder.query(query, [params])` by adding `params` argument

========================
0.0.66
========================

- fixed `update` operation in QueryBuilder NoSQL
- fixed uploading of `mp4` files
- fixed `callback` argument in the `MailMessage.send2()` method
- added `options.tz` for the cluster mode
- updated `FlowStreamMessage.variables()` by adding support for nested properties `path1.path2.value`
- updated `FlowStreamMessage.variables()` keys for `data` must be in the form `{data.key}`